test/semantic_error/undeclared_func.c
/*
Semantic error: Function 'f' is not declared at line 5 column 6
*/
int main(){
    f(1);
    return 0;
}